# Automatically-scource-to-application-

./: ai.py
QRApp/: README.md  metadata.json
QRApp/app/: build.gradle.kts
QRApp/app/src/main/: AndroidManifest.xml
QRApp/app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  native-lib.cpp  qrcodegen.cpp  watermark.cpp
QRApp/app/src/main/java/com/app/qr/: ImageProcessor.kt  QRGenerator.kt  QRGeneratorHelper.kt
QRApp/app/src/main/java/com/app/qr/database/: HistoryDao.kt  HistoryDatabase.kt  HistoryItem.kt  HistoryRepository.kt  QRViewModel.kt
QRApp/app/src/main/java/com/example/: MainActivity.kt
QRApp/app/src/main/res/values/: strings.xml
QRApp/gradle/: libs.versions.toml
